--- a/index.html
+++ b/index.html
@@ -1,15 +1,104 @@
 ---
 layout: home
 search_exclude: true
-image: images/logo.png
+image: images/baddieslogo.png
 ---
 
-This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.
 
-![]({{site.baseurl}}/images/diagram.png "https://github.com/fastai/fastpages")
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {
+  box-sizing: border-box;
+}
 
-[fastpages](https://github.com/fastai/fastpages) automates the process of creating blog posts via GitHub Actions, so you don't have to fuss with conversion scripts.  A full list of features can be found on [GitHub](https://github.com/fastai/fastpages).  
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
 
-You can edit the `index.html` file to change this content.
+/* Float four columns side by side */
+.column {
+  float: left;
+  width: 25%;
+  padding: 0 10px;
+}
+
+/* Remove extra left and right margins, due to padding */
+.row {margin: 0 -5px;}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive columns */
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+    display: block;
+    margin-bottom: 20px;
+  }
+}
+
+/* Style the counter cards */
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  padding: 16px;
+  text-align: center;
+  background-color: #da2467;
+  color: white
+}
+</style>
+</head>
+<body>
+
+<h2 style="text-align: center; font-size: 300%">Welcome to the Team Baddies Fastpage</h2>
+
+<p style="text-align: center">
+<img src="images/baddieslogo.png" alt="Baddies Logo">
+</p>
+
+<div class="row">
+  <div class="column">
+    <div class="card">
+      <h3>Ava Carlson</h3>
+      <p><img src="images/ava.jpg" alt="Ava pic"></p>
+      <p>Background Developer</p>
+    </div>
+  </div>
+
+  <div class="column" style="text-align: center">
+    <div class="card">
+      <h3>Alexa Carlson</h3>
+      <p>Some text</p>
+      <p>Frontend Developer</p>
+    </div>
+  </div>
+  
+  <div class="column">
+    <div class="card">
+      <h3>Lydia Cho</h3>
+      <p>TBD</p>
+      <p>Scrum Master</p>
+    </div>
+  </div>
+  
+  <div class="column">
+    <div class="card">
+      <h3>Sri Kotturi</h3>
+      <p>TBD</p>
+      <p>DevOps</p>
+    </div>
+  </div>
+</div>
+
+</body>
+</html>
+
+
+
 
 # Posts
