deploy: fcddb9e8c4da9825a9bec272140230bb72ce7632

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 <link rel="canonical" href="https://srihitakott1213.github.io/TeamBaddies/" />
 <meta property="og:url" content="https://srihitakott1213.github.io/TeamBaddies/" />
 <meta property="og:site_name" content="fastpages" />
-<meta property="og:image" content="https://srihitakott1213.github.io/TeamBaddies/images/logo.png" />
+<meta property="og:image" content="https://srihitakott1213.github.io/TeamBaddies/images/baddieslogo.png" />
 <meta property="og:type" content="website" />
 <meta name="twitter:card" content="summary_large_image" />
-<meta property="twitter:image" content="https://srihitakott1213.github.io/TeamBaddies/images/logo.png" />
+<meta property="twitter:image" content="https://srihitakott1213.github.io/TeamBaddies/images/baddieslogo.png" />
 <meta property="twitter:title" content="fastpages" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebSite","description":"An easy to use blogging platform with support for Jupyter Notebooks.","headline":"fastpages","image":"https://srihitakott1213.github.io/TeamBaddies/images/logo.png","name":"fastpages","url":"https://srihitakott1213.github.io/TeamBaddies/"}</script>
+{"@context":"https://schema.org","@type":"WebSite","description":"An easy to use blogging platform with support for Jupyter Notebooks.","headline":"fastpages","image":"https://srihitakott1213.github.io/TeamBaddies/images/baddieslogo.png","name":"fastpages","url":"https://srihitakott1213.github.io/TeamBaddies/"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/TeamBaddies/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://srihitakott1213.github.io/TeamBaddies/feed.xml" title="fastpages" /><link rel="shortcut icon" type="image/x-icon" href="/TeamBaddies/images/favicon.ico"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Primer/15.2.0/primer.css" integrity="sha512-xTz2ys4coGAOz8vuV1NcQBkgVmKhsSEtjbqyMJbBHRplFuvKIUo6xhLHpAyPt9mfR6twHJgn9OgVLuqOvjeBhg==" crossorigin="anonymous" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
@@ -66,18 +66,103 @@ window.onload = wrap_img;
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/TeamBaddies/about/">About Me</a><a class="page-link" href="/TeamBaddies/search/">Search</a><a class="page-link" href="/TeamBaddies/categories/">Tags</a></div>
+        <div class="trigger"><a class="page-link" href="/TeamBaddies/search/">Search</a><a class="page-link" href="/TeamBaddies/categories/">Tags</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>This site is built with <a href="https://github.com/fastai/fastpages">fastpages</a>, An easy to use blogging platform with extra features for Jupyter Notebooks.</p>
+        <div class="home"><html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<style>
+* {
+  box-sizing: border-box;
+}
 
-<p><img src="/TeamBaddies/images/diagram.png" alt="" title="https://github.com/fastai/fastpages" /></p>
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
 
-<p><a href="https://github.com/fastai/fastpages">fastpages</a> automates the process of creating blog posts via GitHub Actions, so you don’t have to fuss with conversion scripts.  A full list of features can be found on <a href="https://github.com/fastai/fastpages">GitHub</a>.</p>
+/* Float four columns side by side */
+.column {
+  float: left;
+  width: 25%;
+  padding: 0 10px;
+}
 
-<p>You can edit the <code class="language-plaintext highlighter-rouge">index.html</code> file to change this content.</p>
+/* Remove extra left and right margins, due to padding */
+.row {margin: 0 -5px;}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive columns */
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+    display: block;
+    margin-bottom: 20px;
+  }
+}
+
+/* Style the counter cards */
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  padding: 16px;
+  text-align: center;
+  background-color: #da2467;
+  color: white
+}
+</style>
+</head>
+<body>
+
+<h2 style="text-align: center; font-size: 300%">Welcome to the Team Baddies Fastpage</h2>
+
+<p style="text-align: center">
+<img src="images/baddieslogo.png" alt="Baddies Logo" />
+</p>
+
+<div class="row">
+  <div class="column">
+    <div class="card">
+      <h3>Ava Carlson</h3>
+      <p><img src="images/ava.jpg" alt="Ava pic" /></p>
+      <p>Background Developer</p>
+    </div>
+  </div>
+
+  <div class="column" style="text-align: center">
+    <div class="card">
+      <h3>Alexa Carlson</h3>
+      <p>Some text</p>
+      <p>Frontend Developer</p>
+    </div>
+  </div>
+  
+  <div class="column">
+    <div class="card">
+      <h3>Lydia Cho</h3>
+      <p>TBD</p>
+      <p>Scrum Master</p>
+    </div>
+  </div>
+  
+  <div class="column">
+    <div class="card">
+      <h3>Sri Kotturi</h3>
+      <p>TBD</p>
+      <p>DevOps</p>
+    </div>
+  </div>
+</div>
+
+</body>
+</html>
 
 <h1 id="posts">Posts</h1>
 
