--- a/studentlesson/simulations.html
+++ b/studentlesson/simulations.html
@@ -67,7 +67,7 @@ window.onload = wrap_img;
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/TeamBaddies/about/">About Me</a><a class="page-link" href="/TeamBaddies/search/">Search</a><a class="page-link" href="/TeamBaddies/categories/">Tags</a></div>
+        <div class="trigger"><a class="page-link" href="/TeamBaddies/search/">Search</a><a class="page-link" href="/TeamBaddies/categories/">Tags</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
