--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@ body {
     <div class="card">
       <h3>Ava Carlson</h3>
       <p><img src="images/ava.jpg" alt="Ava pic"></p>
-      <p>Background Developer</p>
+      <p>Backend Developer</p>
     </div>
   </div>
 
   <div class="column" style="text-align: center">
     <div class="card">
       <h3>Alexa Carlson</h3>
-      <p>Some text</p>
+      <p><img src="images/alexa.jpg" alt="Alexa pic"></p>
       <p>Frontend Developer</p>
     </div>
   </div>
