deploy: 7fdd60416b881fb7a1f9ccec373cee9bfbcf4416

--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@ window.onload = wrap_img;
       <div class="wrapper">
         <div class="home"><html>
 <head>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <style>
 * {
@@ -132,14 +136,14 @@ body {
     <div class="card">
       <h3>Ava Carlson</h3>
       <p><img src="images/ava.jpg" alt="Ava pic" /></p>
-      <p>Background Developer</p>
+      <p>Backend Developer</p>
     </div>
   </div>
 
   <div class="column" style="text-align: center">
     <div class="card">
       <h3>Alexa Carlson</h3>
-      <p>Some text</p>
+      <p><img src="images/alexa.jpg" alt="Alexa pic" /></p>
       <p>Frontend Developer</p>
     </div>
   </div>
