added Sri's image

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ body {
   <div class="column">
     <div class="card">
       <h3>Sri Kotturi</h3>
-      <p>TBD</p>
+      <p><img src="images/sri.jpg" alt="Sri pic"></p>
       <p>DevOps</p>
     </div>
   </div>
