deploy: 66cb3a320f6988cf04fc8cb802e404f35cceacb4

--- a/studentlesson/simulations.html
+++ b/studentlesson/simulations.html
@@ -163,6 +163,7 @@ window.onload = wrap_img;
 <p>Simulations are used all the time over many different industries</p>
 <ul>
 <li>testing safety of a car</li>
+<li>games</li>
 <li>testing the efficiency of a parking lot</li>
 <li>testing a new train route</li>
 </ul>
