deploy: ba26af639c799da1f346c5418ee005f2a4451580

--- a/studentlesson/simulations.html
+++ b/studentlesson/simulations.html
@@ -248,8 +248,9 @@ window.onload = wrap_img;
 <div class="output_area">
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>You chose corner number 2 and are still in!
-You chose corner number 1 and you're OUT
+<pre>You chose corner number 3 and are still in!
+You chose corner number 2 and are still in!
+You chose corner number 4 and you're OUT
 </pre>
 </div>
 </div>
