--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ body {
   <div class="column">
     <div class="card">
       <h3>Lydia Cho</h3>
-      <p>TBD</p>
+      <p><img src="images/lydia.jpeg" alt="Lydia pic"></p>
       <p>Scrum Master</p>
     </div>
   </div>
