deploy: 228538921ac107474af85e382418c3a29814ac4a

--- a/studentlesson/simulations.html
+++ b/studentlesson/simulations.html
@@ -450,7 +450,7 @@ You chose corner number 4 and you're OUT
     }
 
     .cell {
-    background-color: royalblue;
+    background-color: lightpink;
     border: 1px solid black;
     }
 </style>
