deploy: 3d4ba92cd75c4d08a8f2cfe03a529d6a509e0c4a

--- a/studentlesson/simulations.html
+++ b/studentlesson/simulations.html
@@ -320,7 +320,7 @@ You chose corner number 4 and you're OUT
 <a class="anchor" href="#Hack-#2" aria-hidden="true"><span class="octicon octicon-link"></span></a>Hack #2<a class="anchor-link" href="#Hack-#2"> </a>
 </h2>
 <ul>
-<li>Simulations Quiz:</li>
+<li>Simulations Quiz (either screenshot or paste quiz in your notebook):</li>
 </ul>
 
 </div>
@@ -416,7 +416,7 @@ You chose corner number 4 and you're OUT
 <span class="n">num_dice</span> <span class="o">=</span> <span class="n">parse_input</span><span class="p">(</span><span class="n">num_dice_input</span><span class="p">)</span>
 <span class="n">roll_results</span> <span class="o">=</span> <span class="n">roll_dice</span><span class="p">(</span><span class="n">num_dice</span><span class="p">)</span>
 
-<span class="nb">print</span><span class="p">(</span><span class="n">roll_results</span><span class="p">)</span> <span class="c1"># remove this line after testing the app</span>
+<span class="nb">print</span><span class="p">(</span><span class="s2">"you rolled:"</span><span class="p">,</span> <span class="n">roll_results</span><span class="p">)</span> 
 </pre></div>
 
     </div>
@@ -429,7 +429,7 @@ You chose corner number 4 and you're OUT
 <div class="output_area">
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>[2, 5, 6, 1]
+<pre>you rolled: [5, 1, 2]
 </pre>
 </div>
 </div>
@@ -693,7 +693,7 @@ function start() {
 <a class="anchor" href="#Hack-#2-(0.1)" aria-hidden="true"><span class="octicon octicon-link"></span></a>Hack #2 (0.1)<a class="anchor-link" href="#Hack-#2-(0.1)"> </a>
 </h3>
 <ul>
-<li>Simulations Quiz </li>
+<li>Simulations Quiz (either screenshot or paste quiz in your notebook)</li>
 </ul>
 <h3 id="Hack-#3-(0.2)">
 <a class="anchor" href="#Hack-#3-(0.2)" aria-hidden="true"><span class="octicon octicon-link"></span></a>Hack #3 (0.2)<a class="anchor-link" href="#Hack-#3-(0.2)"> </a>
