deploy: aa59280ed0385d03a900c1e994c290b5d90b575f

--- a/studentlesson/simulations.html
+++ b/studentlesson/simulations.html
@@ -164,7 +164,9 @@ window.onload = wrap_img;
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <style>
-    background-color: darkgrey;
+    cell {
+        background-color: #00292a;
+    }
 </style>
 <h1 id="3.16-Intro-to-Simulations---Alexa">
 <a class="anchor" href="#3.16-Intro-to-Simulations---Alexa" aria-hidden="true"><span class="octicon octicon-link"></span></a>3.16 Intro to Simulations - Alexa<a class="anchor-link" href="#3.16-Intro-to-Simulations---Alexa"> </a>
@@ -649,6 +651,11 @@ function start() {
 <div class="cell border-box-sizing text_cell rendered">
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+<style>
+    cell {
+        background-color: #00292a;
+    }
+</style>
 <h2 id="Hack-#3">
 <a class="anchor" href="#Hack-#3" aria-hidden="true"><span class="octicon octicon-link"></span></a>Hack #3<a class="anchor-link" href="#Hack-#3"> </a>
 </h2>
