deploy: ea0884b3c21dbff0a5d3d064819ec60c1d9416d3

--- a/studentlesson/simulations.html
+++ b/studentlesson/simulations.html
@@ -556,9 +556,9 @@ function updateContainer() {
     arr.forEach((val, c) => {
         let n = r*GRID_SIZE + c;
         if(val === 1) {
-        document.getElementById("cell-"+n).style['background-color'] = 'royalblue';
+        document.getElementById("cell-"+n).style['background-color'] = 'yellow';
         }else {
-        document.getElementById("cell-"+n).style['background-color'] = 'lightpink'
+        document.getElementById("cell-"+n).style['background-color'] = 'lightblue'
         }
     });
     })
