deploy: 15da60c5496a63fc4b6f1c491a2cb517860a7ed5

--- a/studentlesson/grades.html
+++ b/studentlesson/grades.html
@@ -312,6 +312,12 @@ window.onload = wrap_img;
 <td>Sri Kotturi</td>
 <td>All hacks complete with extra credit for simulation coded for example simulation. Although, guiding questions for dice not super detailed (but detailed for example simulation).</td>
 </tr>
+<tr>
+<td>Antony Yu</td>
+<td>0.79/1</td>
+<td>Lydia Cho</td>
+<td>Hacks submitted late with guiding questions missing for hack 1 and extra credit. Hacks show little effort.</td>
+</tr>
 </tbody>
 </table>
 
