deploy: ad81590d4175aff6301fdbb46d1adbfebd0271c7

--- a/quiz/planning.html
+++ b/quiz/planning.html
@@ -345,7 +345,7 @@ You scored:  4 /6
     <div class="footer-col-wrapper">
       <div class="footer-col">
         <p class="feed-subscribe">
-          <a href="/TeamBaddies/feed.xml">
+          <a href="https://srihitakott1213.github.io/TeamBaddies/feed.xml">
             <svg class="svg-icon orange">
               <use xlink:href="/TeamBaddies/assets/minima-social-icons.svg#rss"></use>
             </svg><span>Subscribe</span>
