--- a/studentlesson/grades.html
+++ b/studentlesson/grades.html
@@ -318,6 +318,12 @@ window.onload = wrap_img;
 <td>Lydia Cho</td>
 <td>Hacks submitted late with guiding questions missing for hack 1 and extra credit. Hacks show little effort.</td>
 </tr>
+<tr>
+<td>Annika Liao</td>
+<td>0.8/1</td>
+<td>Ava Carlson</td>
+<td>Hacks submitted late, guiding questions not fully answered but full extra credit</td>
+</tr>
 </tbody>
 </table>
 
@@ -348,7 +354,7 @@ window.onload = wrap_img;
     <div class="footer-col-wrapper">
       <div class="footer-col">
         <p class="feed-subscribe">
-          <a href="/TeamBaddies/feed.xml">
+          <a href="https://srihitakott1213.github.io/TeamBaddies/feed.xml">
             <svg class="svg-icon orange">
               <use xlink:href="/TeamBaddies/assets/minima-social-icons.svg#rss"></use>
             </svg><span>Subscribe</span>
