--- a/search/index.html
+++ b/search/index.html
@@ -90,7 +90,7 @@ window.onload = wrap_img;
     <div class="footer-col-wrapper">
       <div class="footer-col">
         <p class="feed-subscribe">
-          <a href="/TeamBaddies/feed.xml">
+          <a href="https://srihitakott1213.github.io/TeamBaddies/feed.xml">
             <svg class="svg-icon orange">
               <use xlink:href="/TeamBaddies/assets/minima-social-icons.svg#rss"></use>
             </svg><span>Subscribe</span>
