deploy: 9edf62bcdc1348c4348b8b5dfe958cc9a56429d5

--- a/lesson/week18.html
+++ b/lesson/week18.html
@@ -129,8 +129,10 @@ window.onload = wrap_img;
   <li>
     <p>5th: the input is now in the table displayed in the frontend</p>
   </li>
-  <li>add screenshots of backend code (class code that ava made)</li>
-  <li>add screenshots of frontend code (explain MD, html, CSS)</li>
+  <li>screenshots of backend code (user class code that ava made)</li>
+  <li>screenshots of page (home page, workout table)</li>
+  <li>screenshots of frontend code &lt;- form(s) for input and CSS for home page</li>
+  <li>explain the MD, html, CSS</li>
 </ul>
 
 
