deploy: c5c747eb0354c59154559744bffa6218ac60336d

--- a/lesson/week18.html
+++ b/lesson/week18.html
@@ -98,7 +98,8 @@ window.onload = wrap_img;
     <ul id="toc" class="section-nav">
 <li class="toc-entry toc-h2"><a href="#our-view">Our View</a>
 <ul>
-<li class="toc-entry toc-h3"><a href="#home-page">Home Page?</a></li>
+<li class="toc-entry toc-h3"><a href="#home-page">Home Page</a></li>
+<li class="toc-entry toc-h3"><a href="#workout-log-page">Workout Log Page</a></li>
 <li class="toc-entry toc-h3"><a href="#workout-log-input-and-table">Workout Log Input and Table</a></li>
 </ul>
 </li>
@@ -106,10 +107,15 @@ window.onload = wrap_img;
 <a class="anchor" href="#our-view" aria-hidden="true"><span class="octicon octicon-link"></span></a>Our View</h2>
 
 <h3 id="home-page">
-<a class="anchor" href="#home-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Home Page?</h3>
-<ul>
-  <li>make user login?</li>
-</ul>
+<a class="anchor" href="#home-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Home Page</h3>
+<p><img src="/TeamBaddies/images/homepage.jpg" alt="home page">
+<img src="/TeamBaddies/images/indexpagebackend.jpg" alt="index backend">
+<img src="/TeamBaddies/images/defaulthtmlcode.jpg" alt="Defult HTML"></p>
+
+<h3 id="workout-log-page">
+<a class="anchor" href="#workout-log-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Workout Log Page</h3>
+<p><img src="/TeamBaddies/images/workoutlogfrontend.jpg" alt="Workout Log Frontend">
+<img src="/TeamBaddies/images/formbackend.jpg" alt="Workout Log Backend"></p>
 
 <h3 id="workout-log-input-and-table">
 <a class="anchor" href="#workout-log-input-and-table" aria-hidden="true"><span class="octicon octicon-link"></span></a>Workout Log Input and Table</h3>
