deploy: c8995d8597ea3f1536b1847e4ab52a5b7b466d14

--- a/lesson/week18.html
+++ b/lesson/week18.html
@@ -138,9 +138,22 @@ window.onload = wrap_img;
   <li>screenshots of backend code (user class code that ava made)</li>
   <li>screenshots of page (home page, workout table)</li>
   <li>screenshots of frontend code &lt;- form(s) for input and CSS for home page</li>
-  <li>explain the MD, html, CSS</li>
 </ul>
 
+<p><img src="/TeamBaddies/images/BeginningStepforCrud.jpg" alt="Frontend Code"></p>
+<ul>
+  <li>
+    <p>This is the code that uses html 5 input in the table. This allows people to input their workouts, and the input will go through our UML process (shown in the ss above)</p>
+  </li>
+  <li>
+    <p>explain the MD, html, CSS</p>
+  </li>
+</ul>
+
+<p><img src="/TeamBaddies/images/CSSboxes.jpg" alt="CSS Boxes"></p>
+<ul>
+  <li>This is the code that uses CSS to create the boxes on our project home page. By using CSS, we are able to format aspects of the boxes like the width, height, position, etc.</li>
+</ul>
 
   </div><!-- from https://github.com/utterance/utterances -->
 <script src="https://utteranc.es/client.js"
