deploy: 8077eb9b787900c354addc981dc1f685c141d8ec

--- a/lesson/week18.html
+++ b/lesson/week18.html
@@ -103,6 +103,12 @@ window.onload = wrap_img;
 <li class="toc-entry toc-h3"><a href="#workout-log-input-and-table">Workout Log Input and Table</a></li>
 </ul>
 </li>
+<li class="toc-entry toc-h2"><a href="#frontend-code">Frontend Code</a>
+<ul>
+<li class="toc-entry toc-h5"><a href="#crud">CRUD</a></li>
+<li class="toc-entry toc-h3"><a href="#css-on-our-home-page">CSS on our Home Page</a></li>
+</ul>
+</li>
 </ul><h2 id="our-view">
 <a class="anchor" href="#our-view" aria-hidden="true"><span class="octicon octicon-link"></span></a>Our View</h2>
 
@@ -137,18 +143,25 @@ window.onload = wrap_img;
   </li>
   <li>screenshots of backend code (user class code that ava made)</li>
   <li>screenshots of page (home page, workout table)</li>
-  <li>screenshots of frontend code &lt;- form(s) for input and CSS for home page</li>
 </ul>
+
+<h2 id="frontend-code">
+<a class="anchor" href="#frontend-code" aria-hidden="true"><span class="octicon octicon-link"></span></a>Frontend Code</h2>
 
 <p><img src="/TeamBaddies/images/BeginningStepforCrud.jpg" alt="Frontend Code"></p>
 <ul>
-  <li>
-    <p>This is the code that uses html 5 input in the table. This allows people to input their workouts, and the input will go through our UML process (shown in the ss above)</p>
-  </li>
-  <li>
-    <p>explain the MD, html, CSS</p>
-  </li>
+  <li>This is the code that is the beginning step for C.R.U.D. This uses html 5 input in the table, allowing people to input their workouts. Then, the input will go through our UML process (shown in the ss above).</li>
 </ul>
+
+<h5 id="crud">
+<a class="anchor" href="#crud" aria-hidden="true"><span class="octicon octicon-link"></span></a>CRUD</h5>
+<p>C - In our website, we are creating a login system where the user can input their information and workouts on individual tables.
+R - The information inputted will go through our UML process.
+U - The information, once processed, will be added to the table (such as the workout logs)
+D - The user could have the option to delete on command, not when the page refreshes.</p>
+
+<h3 id="css-on-our-home-page">
+<a class="anchor" href="#css-on-our-home-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>CSS on our Home Page</h3>
 
 <p><img src="/TeamBaddies/images/CSSboxes.jpg" alt="CSS Boxes"></p>
 <ul>
