deploy: 5c6d0789c52bb89b9c8b70a97daca8a4b03f8169

--- a/lesson/week18.html
+++ b/lesson/week18.html
@@ -148,7 +148,7 @@ window.onload = wrap_img;
 <h2 id="frontend-code">
 <a class="anchor" href="#frontend-code" aria-hidden="true"><span class="octicon octicon-link"></span></a>Frontend Code</h2>
 
-<p><img src="/TeamBaddies/images/BeginningStepforCrud.jpg" alt="Frontend Code"></p>
+<p><img src="/TeamBaddies/images/BeginningStepforCrud.png" alt="Frontend Code"></p>
 <ul>
   <li>This is the code that is the beginning step for C.R.U.D. This uses html 5 input in the table, allowing people to input their workouts. Then, the input will go through our UML process (shown in the ss above).</li>
 </ul>
@@ -163,7 +163,7 @@ D - The user could have the option to delete on command, not when the page refre
 <h3 id="css-on-our-home-page">
 <a class="anchor" href="#css-on-our-home-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>CSS on our Home Page</h3>
 
-<p><img src="/TeamBaddies/images/CSSboxes.jpg" alt="CSS Boxes"></p>
+<p><img src="/TeamBaddies/images/CSSboxes.png" alt="CSS Boxes"></p>
 <ul>
   <li>This is the code that uses CSS to create the boxes on our project home page. By using CSS, we are able to format aspects of the boxes like the width, height, position, etc.</li>
 </ul>
