deploy: 8f6e66f6bed79fa26f73ecf4ab3e10e1c2cb4a11

--- a/lesson/week18.html
+++ b/lesson/week18.html
@@ -145,6 +145,8 @@ window.onload = wrap_img;
   <li>screenshots of page (home page, workout table)</li>
 </ul>
 
+<p><img src="/TeamBaddies/images/LoginButton.png" alt="Home Page Login"></p>
+
 <h2 id="frontend-code">
 <a class="anchor" href="#frontend-code" aria-hidden="true"><span class="octicon octicon-link"></span></a>Frontend Code</h2>
 
