deploy: 13d896e3c7ddf4d8e3efaf6d7e497e35f3b2d6e9

--- a/lesson/week18.html
+++ b/lesson/week18.html
@@ -96,7 +96,7 @@ window.onload = wrap_img;
 
   <div class="post-content e-content" itemprop="articleBody">
     <ul id="toc" class="section-nav">
-<li class="toc-entry toc-h2"><a href="#our-view">Our View</a>
+<li class="toc-entry toc-h2"><a href="#our-view-and-model">Our View and Model</a>
 <ul>
 <li class="toc-entry toc-h3"><a href="#home-page">Home Page</a></li>
 <li class="toc-entry toc-h3"><a href="#workout-log-page">Workout Log Page</a></li>
@@ -105,12 +105,12 @@ window.onload = wrap_img;
 </li>
 <li class="toc-entry toc-h2"><a href="#frontend-code">Frontend Code</a>
 <ul>
-<li class="toc-entry toc-h5"><a href="#crud">CRUD</a></li>
+<li class="toc-entry toc-h4"><a href="#crud">CRUD</a></li>
 <li class="toc-entry toc-h3"><a href="#css-on-our-home-page">CSS on our Home Page</a></li>
 </ul>
 </li>
-</ul><h2 id="our-view">
-<a class="anchor" href="#our-view" aria-hidden="true"><span class="octicon octicon-link"></span></a>Our View</h2>
+</ul><h2 id="our-view-and-model">
+<a class="anchor" href="#our-view-and-model" aria-hidden="true"><span class="octicon octicon-link"></span></a>Our View and Model</h2>
 
 <h3 id="home-page">
 <a class="anchor" href="#home-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Home Page</h3>
@@ -151,8 +151,8 @@ window.onload = wrap_img;
   <li>This is the code that is the beginning step for C.R.U.D. This uses html 5 input in the table, allowing people to input their workouts. Then, the input will go through our UML process (shown in the ss above).</li>
 </ul>
 
-<h5 id="crud">
-<a class="anchor" href="#crud" aria-hidden="true"><span class="octicon octicon-link"></span></a>CRUD</h5>
+<h4 id="crud">
+<a class="anchor" href="#crud" aria-hidden="true"><span class="octicon octicon-link"></span></a>CRUD</h4>
 <p>C - In our website, we are creating a login system where the user can input their information and workouts on individual tables.
 R - The information inputted will go through our UML process.
 U - The information, once processed, will be added to the table (such as the workout logs)
