deploy: c13d10c59e92f74b2acf0145918146487af44fc8

--- a/lesson/week18.html
+++ b/lesson/week18.html
@@ -116,7 +116,8 @@ window.onload = wrap_img;
 <a class="anchor" href="#home-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Home Page</h3>
 <p><img src="/TeamBaddies/images/homepage.jpg" alt="home page">
 <img src="/TeamBaddies/images/indexpagebackend.jpg" alt="index backend">
-<img src="/TeamBaddies/images/defaulthtmlcode.jpg" alt="Defult HTML"></p>
+<img src="/TeamBaddies/images/defaulthtmlcode.jpg" alt="Defult HTML">
+<img src="/TeamBaddies/images/LoginButton.png" alt="Home Page Login"></p>
 
 <h3 id="workout-log-page">
 <a class="anchor" href="#workout-log-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Workout Log Page</h3>
@@ -141,8 +142,6 @@ window.onload = wrap_img;
   <li>5th: the input is now in the table displayed in the frontend</li>
 </ul>
 
-<p><img src="/TeamBaddies/images/LoginButton.png" alt="Home Page Login"></p>
-
 <h2 id="frontend-code">
 <a class="anchor" href="#frontend-code" aria-hidden="true"><span class="octicon octicon-link"></span></a>Frontend Code</h2>
 
@@ -153,10 +152,12 @@ window.onload = wrap_img;
 
 <h4 id="crud">
 <a class="anchor" href="#crud" aria-hidden="true"><span class="octicon octicon-link"></span></a>CRUD</h4>
-<p>C - In our website, we are creating a login system where the user can input their information and workouts on individual tables.
-R - The information inputted will go through our UML process.
-U - The information, once processed, will be added to the table (such as the workout logs)
-D - The user could have the option to delete on command, not when the page refreshes.</p>
+<ul>
+  <li>C - In our website, we are creating a login system where the user can input their information and workouts on individual tables.</li>
+  <li>R - The information inputted will go through our UML process.</li>
+  <li>U - The information, once processed, will be added to the table (such as the workout logs)</li>
+  <li>D - The user could have the option to delete on command, not when the page refreshes.</li>
+</ul>
 
 <h3 id="css-on-our-home-page">
 <a class="anchor" href="#css-on-our-home-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>CSS on our Home Page</h3>
