deploy: 130af85ae633d23e22549b4883ad0fb75db82b40

--- a/lesson/week18.html
+++ b/lesson/week18.html
@@ -156,7 +156,7 @@ window.onload = wrap_img;
 <h2 id="backend-code">
 <a class="anchor" href="#backend-code" aria-hidden="true"><span class="octicon octicon-link"></span></a>Backend Code</h2>
 <p><img src="/TeamBaddies/images/backendcode.png" alt="Backend Code">
-The image above is the Object Oriented Backend Code that will be used to process the data sent from the frontend forms. We are trying to have personalized data and tables for each user. I think that adding setter and getter functions for each table will allow users to have an individual experience. We would have one class called users, and their data would be extracted and added to dictionaries for each of the individual tables. I am not sure if this is exactly how this works, but it was a shot.</p>
+The image above is the Object Oriented Backend Code that will be used to process the data sent from the frontend forms. We are trying to have personalized data and tables for each user. I think that adding setter and getter functions for each table will allow users to have an individual experience. We would have one class called users, and their data would be extracted and added to dictionaries for each of the individual tables. I am not sure if this is exactly how this works, but it was worth a shot.</p>
 
 <h4 id="crud">
 <a class="anchor" href="#crud" aria-hidden="true"><span class="octicon octicon-link"></span></a>CRUD</h4>
