deploy: f19aa99d0e9b17d2e83a9f09ae4802b60e204deb

--- a/projectproposal/APCSA.html
+++ b/projectproposal/APCSA.html
@@ -106,6 +106,7 @@ window.onload = wrap_img;
 </ul>
 </li>
 <li class="toc-entry toc-h2"><a href="#their-presentation">Their Presentation:</a></li>
+<li class="toc-entry toc-h2"><a href="#taking-into-account-for-our-group">Taking into Account for our Group:</a></li>
 </ul><h2 id="project-a-tool-to-help-asb-clubs-executive">
 <a class="anchor" href="#project-a-tool-to-help-asb-clubs-executive" aria-hidden="true"><span class="octicon octicon-link"></span></a>Project= a Tool to help ASB Clubs Executive:</h2>
 <ul>
@@ -139,6 +140,14 @@ window.onload = wrap_img;
   <li>showed a chart that showed level of acess (admin vs user)</li>
   <li>made a specific plan/goal of everything they wil be completing in the next 6 weeks (assigned work)</li>
   <li>issues/scrum board/manifesto</li>
+</ul>
+
+<h2 id="taking-into-account-for-our-group">
+<a class="anchor" href="#taking-into-account-for-our-group" aria-hidden="true"><span class="octicon octicon-link"></span></a>Taking into Account for our Group:</h2>
+<ul>
+  <li>details = everything!</li>
+  <li>include lots of visuals</li>
+  <li>make a specific plan of how we are going to accomplish our project on time</li>
 </ul>
 
 
