deploy: 975567088396f4c9429209bc0b8c6faa6c20f284

--- a/index.html
+++ b/index.html
@@ -159,6 +159,14 @@ body {
       <p>DevOps</p>
     </div>
   </div>
+
+  <div class="column" style="text-align: center">
+    <div class="card">
+      <h3>Nikhil Chakravarthula</h3>
+      <p><img src="images/personicon.png" alt="Nikhil pic" /></p>
+      <p>Frontend Developer</p>
+    </div>
+  </div>
 </div>
 
 </body>
