--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ body {
 <h2 style="text-align: center; font-size: 300%">Welcome to the Team Baddies Fastpage</h2>
 
 <p style="text-align: center">
-<img src="images/baddieslogo.png" alt="Baddies Logo" /> + Nikhil
+<img src="images/baddieslogo.png" alt="Baddies Logo" /> + Nikhil (he a baddie now)
 </p>
 
 <div class="row">
