--- a/projectproposal/TeamBaddies.html
+++ b/projectproposal/TeamBaddies.html
@@ -102,14 +102,19 @@ window.onload = wrap_img;
 
   <div class="post-content e-content" itemprop="articleBody">
     <ul id="toc" class="section-nav">
+<li class="toc-entry toc-h2"><a href="#home-page-nikhil">Home Page (Nikhil)</a></li>
+<li class="toc-entry toc-h2"><a href="#ispe-page-alexa">ISPE page (Alexa)</a></li>
+<li class="toc-entry toc-h2"><a href="#what-is-ispe">What is ISPE?</a></li>
+<li class="toc-entry toc-h2"><a href="#admin-vs-user-access-alexa">Admin vs User Access (Alexa)</a></li>
 </ul><ul>
-  <li>
-    <p>Welcome image (Ava)</p>
-  </li>
-  <li>
-    <p>home page (Nikhil)
-<img src="/TeamBaddies/images/homepage.jpg" alt="home page"></p>
-  </li>
+  <li>Welcome image (Ava)</li>
+</ul>
+
+<h2 id="home-page-nikhil">
+<a class="anchor" href="#home-page-nikhil" aria-hidden="true"><span class="octicon octicon-link"></span></a>Home Page (Nikhil)</h2>
+<p><img src="/TeamBaddies/images/homepage.jpg" alt="home page"></p>
+
+<ul>
   <li>
     <p>workout log page (Sri)
 <img src="/TeamBaddies/images/workoutlogfrontend.jpg" alt="Workout Log"></p>
@@ -118,17 +123,37 @@ window.onload = wrap_img;
     <p>workouts plan (Lydia)
 add image</p>
   </li>
+</ul>
+
+<h2 id="ispe-page-alexa">
+<a class="anchor" href="#ispe-page-alexa" aria-hidden="true"><span class="octicon octicon-link"></span></a>ISPE page (Alexa)</h2>
+<p>add image</p>
+<h2 id="what-is-ispe">
+<a class="anchor" href="#what-is-ispe" aria-hidden="true"><span class="octicon octicon-link"></span></a>What is ISPE?</h2>
+<p><strong>I</strong>ndependent <br>
+<strong>S</strong>port <br>
+<strong>P</strong>hysical <br>
+<strong>E</strong>ducation <br></p>
+
+<ul>
+  <li>ISPE is a program for kids who are in individual sports and practice for 15+ hours a week and want middle/highschool credit for the PE (without taking the actual class)</li>
+  <li>This page allows students to keep track of the workouts they do for school and the grades they recieve.</li>
   <li>
-    <p>ISPE page (Alexa)
-add image</p>
+    <p>It keeps students organized, motivated, and on track to get credit for the class.</p>
   </li>
   <li>
     <p>Inspo page (Ava)</p>
   </li>
+  <li>our challenges (Ava)</li>
+</ul>
+
+<h2 id="admin-vs-user-access-alexa">
+<a class="anchor" href="#admin-vs-user-access-alexa" aria-hidden="true"><span class="octicon octicon-link"></span></a>Admin vs User Access (Alexa)</h2>
+<ul>
+  <li>Anyone who is an Admin (Ava, Alexa, Lydia, Sri, Nikhil) can acess all users and their inputs</li>
   <li>
-    <p>our challenges (Ava)</p>
+    <p>Any user with a normal account will only be able to see/add/edit their own inputs on their pages</p>
   </li>
-  <li>talk about admin vs user access (Alexa)</li>
   <li>scrum board (Lydia)</li>
   <li>issues (Nikhil)</li>
   <li>manifesto (sri)</li>
