deploy: c8c9e6e8f290cd98c391d873cebd513fd6bd5d3f

--- a/projectproposal/TeamBaddies.html
+++ b/projectproposal/TeamBaddies.html
@@ -127,7 +127,7 @@ add image</p>
 
 <h2 id="ispe-page-alexa">
 <a class="anchor" href="#ispe-page-alexa" aria-hidden="true"><span class="octicon octicon-link"></span></a>ISPE page (Alexa)</h2>
-<p>add image</p>
+<p><img src="/TeamBaddies/images/ISPEgrades.jpg" alt="ISPE"></p>
 <h2 id="what-is-ispe">
 <a class="anchor" href="#what-is-ispe" aria-hidden="true"><span class="octicon octicon-link"></span></a>What is ISPE?</h2>
 <p><strong>I</strong>ndependent <br>
@@ -155,7 +155,6 @@ add image</p>
     <p>Any user with a normal account will only be able to see/add/edit their own inputs on their pages</p>
   </li>
   <li>scrum board (Lydia)</li>
-  <li>issues (Nikhil)</li>
   <li>manifesto (sri)</li>
   <li>goal/timeline (team)</li>
 </ul>
