--- a/projectproposal/TeamBaddies.html
+++ b/projectproposal/TeamBaddies.html
@@ -106,6 +106,7 @@ window.onload = wrap_img;
 <li class="toc-entry toc-h2"><a href="#ispe-page-alexa">ISPE page (Alexa)</a></li>
 <li class="toc-entry toc-h2"><a href="#what-is-ispe">What is ISPE?</a></li>
 <li class="toc-entry toc-h2"><a href="#admin-vs-user-access-alexa">Admin vs User Access (Alexa)</a></li>
+<li class="toc-entry toc-h2"><a href="#what-is-ispe-1">What is ISPE?</a></li>
 </ul><ul>
   <li>Welcome image (Ava)</li>
 </ul>
@@ -115,14 +116,17 @@ window.onload = wrap_img;
 <p><img src="/TeamBaddies/images/homepage.jpg" alt="home page"></p>
 
 <ul>
+  <li>workout log page (Sri)
+<img src="/TeamBaddies/images/workoutlogfrontend.jpg" alt="Workout Log">
+</li>
+  <li>This is a workout log where you can record your workouts and keep track of your fitness. This way, you can stay organized and maintain motivation to work towards a healthy lifestyle.</li>
+  <li>Has an input</li>
+  <li>Has a table at the bottom</li>
   <li>
-    <p>workout log page (Sri)
-<img src="/TeamBaddies/images/workoutlogfrontend.jpg" alt="Workout Log"></p>
+    <p>Once you click submit button, it should add onto the table at the bottom (connection between frontend and backend)</p>
   </li>
-  <li>
-    <p>workouts plan (Lydia)
-add image</p>
-  </li>
+  <li>workouts plan (Lydia)
+add image</li>
 </ul>
 
 <h2 id="ispe-page-alexa">
@@ -154,8 +158,12 @@ add image</p>
   <li>
     <p>Any user with a normal account will only be able to see/add/edit their own inputs on their pages</p>
   </li>
-  <li>scrum board (Lydia)</li>
-  <li>manifesto (sri)</li>
+  <li>scrum board (Lydia)
+ ## Our Agile Manifesto (sri)
+<img src="/TeamBaddies/images/agilemanifesto.jpg" alt="Agile Manifesto">
+    <h2 id="what-is-ispe-1">
+<a class="anchor" href="#what-is-ispe-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>What is ISPE?</h2>
+  </li>
   <li>goal/timeline (team)</li>
 </ul>
 
