--- a/projectproposal/TeamBaddies.html
+++ b/projectproposal/TeamBaddies.html
@@ -102,14 +102,18 @@ window.onload = wrap_img;
 
   <div class="post-content e-content" itemprop="articleBody">
     <ul id="toc" class="section-nav">
+<li class="toc-entry toc-h2"><a href="#welcome-image-ava">Welcome Image (Ava)</a></li>
 <li class="toc-entry toc-h2"><a href="#home-page-nikhil">Home Page (Nikhil)</a></li>
+<li class="toc-entry toc-h2"><a href="#workouts-plan-lydia">Workouts Plan (Lydia)</a></li>
 <li class="toc-entry toc-h2"><a href="#ispe-page-alexa">ISPE page (Alexa)</a></li>
 <li class="toc-entry toc-h2"><a href="#what-is-ispe">What is ISPE?</a></li>
+<li class="toc-entry toc-h2"><a href="#inspo-page-ava">Inspo Page (Ava)</a></li>
+<li class="toc-entry toc-h2"><a href="#our-challenges-ava">Our Challenges (Ava)</a></li>
 <li class="toc-entry toc-h2"><a href="#admin-vs-user-access-alexa">Admin vs User Access (Alexa)</a></li>
-<li class="toc-entry toc-h2"><a href="#what-is-ispe-1">What is ISPE?</a></li>
-</ul><ul>
-  <li>Welcome image (Ava)</li>
-</ul>
+<li class="toc-entry toc-h2"><a href="#scrum-board-lydia">Scrum Board (Lydia)</a></li>
+<li class="toc-entry toc-h2"><a href="#goaltimeline-team">Goal/Timeline (team)</a></li>
+</ul><h2 id="welcome-image-ava">
+<a class="anchor" href="#welcome-image-ava" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome Image (Ava)</h2>
 
 <h2 id="home-page-nikhil">
 <a class="anchor" href="#home-page-nikhil" aria-hidden="true"><span class="octicon octicon-link"></span></a>Home Page (Nikhil)</h2>
@@ -122,12 +126,12 @@ window.onload = wrap_img;
   <li>This is a workout log where you can record your workouts and keep track of your fitness. This way, you can stay organized and maintain motivation to work towards a healthy lifestyle.</li>
   <li>Has an input</li>
   <li>Has a table at the bottom</li>
-  <li>
-    <p>Once you click submit button, it should add onto the table at the bottom (connection between frontend and backend)</p>
-  </li>
-  <li>workouts plan (Lydia)
-add image</li>
+  <li>Once you click submit button, it should add onto the table at the bottom (connection between frontend and backend)</li>
 </ul>
+
+<h2 id="workouts-plan-lydia">
+<a class="anchor" href="#workouts-plan-lydia" aria-hidden="true"><span class="octicon octicon-link"></span></a>Workouts Plan (Lydia)</h2>
+<p>add image</p>
 
 <h2 id="ispe-page-alexa">
 <a class="anchor" href="#ispe-page-alexa" aria-hidden="true"><span class="octicon octicon-link"></span></a>ISPE page (Alexa)</h2>
@@ -142,30 +146,30 @@ add image</li>
 <ul>
   <li>ISPE is a program for kids who are in individual sports and practice for 15+ hours a week and want middle/highschool credit for the PE (without taking the actual class)</li>
   <li>This page allows students to keep track of the workouts they do for school and the grades they recieve.</li>
-  <li>
-    <p>It keeps students organized, motivated, and on track to get credit for the class.</p>
-  </li>
-  <li>
-    <p>Inspo page (Ava)</p>
-  </li>
-  <li>our challenges (Ava)</li>
+  <li>It keeps students organized, motivated, and on track to get credit for the class.</li>
 </ul>
+
+<h2 id="inspo-page-ava">
+<a class="anchor" href="#inspo-page-ava" aria-hidden="true"><span class="octicon octicon-link"></span></a>Inspo Page (Ava)</h2>
+
+<h2 id="our-challenges-ava">
+<a class="anchor" href="#our-challenges-ava" aria-hidden="true"><span class="octicon octicon-link"></span></a>Our Challenges (Ava)</h2>
 
 <h2 id="admin-vs-user-access-alexa">
 <a class="anchor" href="#admin-vs-user-access-alexa" aria-hidden="true"><span class="octicon octicon-link"></span></a>Admin vs User Access (Alexa)</h2>
 <ul>
   <li>Anyone who is an Admin (Ava, Alexa, Lydia, Sri, Nikhil) can acess all users and their inputs</li>
-  <li>
-    <p>Any user with a normal account will only be able to see/add/edit their own inputs on their pages</p>
-  </li>
-  <li>scrum board (Lydia)
- ## Our Agile Manifesto (sri)
-<img src="/TeamBaddies/images/agilemanifesto.jpg" alt="Agile Manifesto">
-    <h2 id="what-is-ispe-1">
-<a class="anchor" href="#what-is-ispe-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>What is ISPE?</h2>
-  </li>
-  <li>goal/timeline (team)</li>
+  <li>Any user with a normal account will only be able to see/add/edit their own inputs on their pages</li>
 </ul>
+
+<h2 id="scrum-board-lydia">
+<a class="anchor" href="#scrum-board-lydia" aria-hidden="true"><span class="octicon octicon-link"></span></a>Scrum Board (Lydia)</h2>
+
+<p>## Our Agile Manifesto (sri)
+<img src="/TeamBaddies/images/agilemanifesto.jpg" alt="Agile Manifesto"></p>
+
+<h2 id="goaltimeline-team">
+<a class="anchor" href="#goaltimeline-team" aria-hidden="true"><span class="octicon octicon-link"></span></a>Goal/Timeline (team)</h2>
 
   </div><!-- from https://github.com/utterance/utterances -->
 <script src="https://utteranc.es/client.js"
