deploy: e5356446cb1b5890fe353d891de54716b8da4ddb

--- a/projectproposal/TeamBaddies.html
+++ b/projectproposal/TeamBaddies.html
@@ -110,7 +110,7 @@ window.onload = wrap_img;
 <li class="toc-entry toc-h2"><a href="#our-challenges-ava">Our Challenges (Ava)</a></li>
 <li class="toc-entry toc-h2"><a href="#admin-vs-user-access-alexa">Admin vs User Access (Alexa)</a></li>
 <li class="toc-entry toc-h2"><a href="#scrum-board-lydia">Scrum Board (Lydia)</a></li>
-<li class="toc-entry toc-h2"><a href="#goaltimeline-team">Goal/Timeline (team)</a></li>
+<li class="toc-entry toc-h2"><a href="#goaltimeline">Goal/Timeline</a></li>
 </ul><p><img src="/TeamBaddies/images/welcome.png" alt="Welcome Image"></p>
 
 <h2 id="home-page-nikhil">
@@ -203,8 +203,11 @@ window.onload = wrap_img;
 <p>## Our Agile Manifesto (sri)
 <img src="/TeamBaddies/images/agilemanifesto.jpg" alt="Agile Manifesto"></p>
 
-<h2 id="goaltimeline-team">
-<a class="anchor" href="#goaltimeline-team" aria-hidden="true"><span class="octicon octicon-link"></span></a>Goal/Timeline (team)</h2>
+<h2 id="goaltimeline">
+<a class="anchor" href="#goaltimeline" aria-hidden="true"><span class="octicon octicon-link"></span></a>Goal/Timeline</h2>
+<ul>
+  <li>weekly progress goals</li>
+</ul>
 
   </div><!-- from https://github.com/utterance/utterances -->
 <script src="https://utteranc.es/client.js"
