deploy: 2ce9d148af22d8cba7b250ebff3ac6830dbd8c57

--- a/studentlesson/simulations.html
+++ b/studentlesson/simulations.html
@@ -193,7 +193,7 @@ window.onload = wrap_img;
 <a class="anchor" href="#Guiding-questions-for-a-simulation:" aria-hidden="true"><span class="octicon octicon-link"></span></a>Guiding questions for a simulation:<a class="anchor-link" href="#Guiding-questions-for-a-simulation:"> </a>
 </h1>
 <pre><code>- What makes it a simulation?
-- What are it’s advantages and disadvantages? 
+- What are its advantages and disadvantages? 
 - In your opinion, would an experiment be better in this situation?</code></pre>
 
 </div>
